--- a/styles.css
+++ b/styles.css
@@ -44,3 +44,12 @@ body {
     background-color: lawngreen;
     margin-top: 15px;
 }
+footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: rgb(0, 0, 0);
+    color: white;
+    text-align: center;
+}
